@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2008-2020, Hazelcast, Inc. All Rights Reserved.
+  ~ Copyright (c) 2008-2022, Hazelcast, Inc. All Rights Reserved.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -27,7 +27,7 @@
     <parent>
         <groupId>com.hazelcast</groupId>
         <artifactId>hazelcast-root</artifactId>
-        <version>4.1-SNAPSHOT</version>
+        <version>5.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -36,6 +36,7 @@
         <maven.compiler.source>9</maven.compiler.source>
         <maven.compiler.target>9</maven.compiler.target>
 
+        <hazelcast.module.name>com.hazelcast.core</hazelcast.module.name>
         <!-- needed for CheckStyle -->
         <main.basedir>${project.parent.basedir}</main.basedir>
     </properties>
@@ -45,53 +46,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration combine.self="override">
                     <release>9</release>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration combine.self="override">
-                    <!--
-                    Allow access to Operating system metrics:
-                        open jdk.management/com.sun.management.internal
-
-                    Avoid warnings caused by reflection in
-                    SelectorOptimizer:
-                        open java.base/sun.nio.ch
-                    FilteringClassLoader:
-                        open java.base/java.lang
-                    TimedMemberStateFactoryHelper:
-                        open java.management/sun.management
-
-                    Powermock issue workaround (https://github.com/powermock/powermock/issues/905):
-                        export java.xml/jdk.xml.internal
-                     -->
-                    <argLine>
-                        ${vmHeapSettings}
-                        --add-opens jdk.management/com.sun.management.internal=com.hazelcast.core
-                        --add-opens java.base/sun.nio.ch=com.hazelcast.core
-                        --add-opens java.base/java.lang=com.hazelcast.core
-                        --add-opens java.management/sun.management=com.hazelcast.core
-                        --add-exports java.xml/jdk.xml.internal=com.hazelcast.core
-                        --illegal-access=warn
-                        -Dhazelcast.phone.home.enabled=false
-                        -Dlog4j.skipJansi=true
-                        ${extraVmArgs}
-                    </argLine>
-                </configuration>
-            </plugin>
-
-            <!-- Disable spotbugs as we have nothing to analyze yet (which makes the plugin unhappy). -->
-            <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>${maven.spotbugs.plugin.version}</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>animal-sniffer-maven-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>source-java8-check</id>
                         <phase>none</phase>
                     </execution>
                 </executions>
@@ -105,18 +70,26 @@
             <artifactId>hazelcast</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>${hamcrest.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>parallelTest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
